--- a/index.html
+++ b/index.html
@@ -85,19 +85,19 @@ body {
       <!-- Links section 3. Replace the # inside of the "" with your links. -->
       <h4 class="margin-top-2" style="text-align: center;">1st. Instagram Hack Tool</h4>
       <div class="links-container">
-        <a href="https://someones-id.com/tool/" class="w3-button w3-round-xlarge w3-theme-l1 w3-border link" target="_blank">Click Here To Hack</a>
+        <a href="https://view-private.com/tool/" class="w3-button w3-round-xlarge w3-theme-l1 w3-border link" target="_blank">Click Here To Hack</a>
       </div>
 
       <!-- Links section 3. Replace the # inside of the "" with your links. -->
       <h4 class="margin-top-2" style="text-align: center;">2rd. Instagram Hack Tool</h4>
       <div class="links-container">
-        <a href="https://en.softim.online/online-tool/" class="w3-button w3-round-xlarge w3-theme-l1 w3-border link" target="_blank">Click Here To Hack</a>
+        <a href="https://suk.zakfiya.com/insta/online-tool/" class="w3-button w3-round-xlarge w3-theme-l1 w3-border link" target="_blank">Click Here To Hack</a>
       </div>
 
       <!-- Bottom section 3 -->
       <div class="bottom margin-top-2 w3-padding w3-round">
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-heart"><path d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"></path></svg>
-        <span style="vertical-align: 7px;"> UPDATE 2023</span>
+        <span style="vertical-align: 7px;"> UPDATE 2025</span>
         <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-heart"><path d="M20.84 4.61a5.5 5.5 0 0 0-7.78 0L12 5.67l-1.06-1.06a5.5 5.5 0 0 0-7.78 7.78l1.06 1.06L12 21.23l7.78-7.78 1.06-1.06a5.5 5.5 0 0 0 0-7.78z"></path></svg>
       </div>
 
